css/mobile.css
@media (max-width:480px) {
    header {
        width: 100%;
        bottom: 0;
        height: 10%;
        padding: 0px;
    }

    header nav {
        flex-direction: row;
        width: 100%;
        height: 100%;
        justify-content: space-evenly;
    }

    header nav a span {
        left: -10px !important;
        display: none !important;
    }

    header nav a span:before {
        display: none;
    }

    .itens-wrapper {
        height: 90%;
        width: 100%;
        padding: 5px;
    }

    #home .itens-wrapper {
        text-align: center;
        display: flex;
    }

    #resumeView span {
        display: none;
    }

    .container {
        display: flex;
        align-items: flex-start;
        justify-content: center;
        overflow-y: none !important;
        padding: 0px;
    }

    .experience,
    .hard,
    .projects {
        width: 100%;
        height: max-content !important;
    }

    .obj,
    .soft,
    .git {
        width: 100%;
        border: none;
        height: max-content !important;
    }

    #about .itens-wrapper,
    #skills .itens-wrapper,
    #projects .itens-wrapper {
        display: initial;
        overflow-y: scroll !important;
    }

    .card {
        height: max-content;
    }

    .hard-card {
        width: calc(50% - var(--white-space));
    }

    #projects-cards .card {
        flex-direction: column;
        align-items: center;
    }

    #projects-cards .card .desc {
        width: 100%;
    }

    #projects-cards .card .stacks {
        margin-top: var(--white-space);
    }

    #projects-cards .card .links {
        flex-direction: row;
        align-items: center;
        width: 100%;
    }

    .custom-scrollbar {
        display: none;
    }

    body {
        overflow-y: inherit !important;
    }

}

